--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".auth.login">
+        <activity android:name=".auth.login"
+            >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
